fix(Auth): Prevent password from overflowing into show button

--- a/root/frontend/react-src/src/auth/Entry.css
+++ b/root/frontend/react-src/src/auth/Entry.css
@@ -80,6 +80,7 @@
     font-size: .875rem;
     display: block;
     padding-left: 2.75rem;
+    padding-right: 3.25rem;
     border: solid thin #ddd;
     border-radius: 2.688em;
     justify-self: center;
